[gd_scene load_steps=4 format=2]

[ext_resource path="res://level_1.gd" type="Script" id=1]
[ext_resource path="res://scenes/enemies.tscn" type="PackedScene" id=2]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 31.644, -2.44461, 0, 0, 0, 0, 448.114, -3.11203 )
}

[node name="level_1" type="Node"]
script = ExtResource( 1 )
enemy_scn = ExtResource( 2 )

[node name="mines_timer" type="Timer" parent="."]
wait_time = 7.0
one_shot = true

[node name="rock_spawn" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="Path2D" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D"]
position = Vector2( 31.644, -2.44461 )
rotation = -0.0016025

[node name="spawn_ship" type="Timer" parent="."]
wait_time = 1.25
one_shot = true
[connection signal="timeout" from="mines_timer" to="." method="_mine_enemy"]
[connection signal="timeout" from="rock_spawn" to="." method="_rock_enemy"]
[connection signal="timeout" from="spawn_ship" to="." method="_spawn_ship"]
